[package]
authors = ["Brian Caswell <bcaswell@gmail.com>"]
description = "Unofficial suite of helpers to expand on the use of azure-identity"
documentation = "https://docs.rs/azure-identity-helpers"
edition = "2024"
homepage = "https://github.com/demoray/azure-identity-helpers"
keywords = ["azure"]
license = "MIT"
name = "azure-identity-helpers"
repository = "https://github.com/demoray/azure-identity-helpers"
version = "0.0.5"

[dependencies]
async-lock = "3.4"
async-trait = "0.1"
azure_core = { version = "0.24", default-features = false }
azure_identity = { version = "0.24", default-features = false }
futures = "0.3"
oauth2 = { version = "5.0", default-features = false }
serde = "1.0"
time = "0.3"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio = "1.45"
