[package]
authors = ["Brian Caswell <bcaswell@gmail.com>"]
categories = ["api-bindings"]
description = "Unofficial suite of helpers to expand on the use of azure-identity"
documentation = "https://docs.rs/azure-identity-helpers"
edition = "2024"
homepage = "https://github.com/demoray/azure-identity-helpers"
keywords = ["azure"]
license = "MIT"
name = "azure-identity-helpers"
repository = "https://github.com/demoray/azure-identity-helpers"
version = "0.0.11"

[dependencies]
async-lock = { version = "3.4", default-features = false }
async-trait = { version = "0.1", default-features = false }
azure_core = { version = "0.31", default-features = false }
azure_identity = { version = "0.31", default-features = false }
futures = { version = "0.3", default-features = false }
oauth2 = { version = "5.0", default-features = false }
serde = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.49", default-features = false }

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

missing_const_for_fn = "allow"
missing_errors_doc = "allow"
significant_drop_tightening = "allow"
multiple_crate_versions = "allow"

[lints.rust]
ambiguous_negative_literals = "deny"
non_snake_case = "deny"
non_upper_case_globals = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_numeric_casts = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_imports = "deny"
unused_lifetimes = "deny"
